--- a/deno.json
+++ b/deno.json
@@ -11,9 +11,9 @@
   "imports": {
     "@cosense/std": "jsr:@cosense/std@0.29",
     "@cosense/types": "jsr:@cosense/types@0.10",
-    "@modelcontextprotocol/sdk": "npm:@modelcontextprotocol/sdk@1.13.3",
+    "@modelcontextprotocol/sdk": "npm:@modelcontextprotocol/sdk@1",
     "option-t": "npm:option-t@53",
-    "zod": "npm:zod@^3.25.76"
+    "zod": "npm:zod@3"
   },
   "license": "MIT",
   "name": "@takker/cosense-mcp-server",
