--- a/deno.json
+++ b/deno.json
@@ -12,6 +12,7 @@
     "@cosense/std": "jsr:@cosense/std@0.29",
     "@cosense/types": "jsr:@cosense/types@0.10",
     "@modelcontextprotocol/sdk": "npm:@modelcontextprotocol/sdk@1",
+    "date-fns": "npm:date-fns@^4.1.0",
     "option-t": "npm:option-t@53",
     "zod": "npm:zod@3"
   },
