--- a/deno.json
+++ b/deno.json
@@ -10,8 +10,8 @@
   },
   "imports": {
     "@cosense/std": "jsr:@cosense/std@0.29",
-    "@cosense/types": "jsr:@cosense/types@0.10",
-    "@modelcontextprotocol/sdk": "npm:@modelcontextprotocol/sdk@1",
+    "@cosense/types": "jsr:@cosense/types@^0.10.10",
+    "@modelcontextprotocol/sdk": "npm:@modelcontextprotocol/sdk@^1.17.1",
     "date-fns": "npm:date-fns@^4.1.0",
     "option-t": "npm:option-t@53",
     "zod": "npm:zod@3"
